Aprendendo sobre Diretivas Elvis e ng-content - Data-Binding - Loiane

--- a/angular-part03-diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
+++ b/angular-part03-diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
@@ -52,4 +52,15 @@
   <hr class="m-0">
 
   <app-operador-elvis></app-operador-elvis>
+
+  <hr class="m-0">
+
+  <app-diretiva-ng-content>
+    <div class="tituloCard">
+      Card title
+    </div>
+    <div class="corpoCard">
+      Some quick example text to build on the card title and make up the bulk of the card's content.
+    </div>
+  </app-diretiva-ng-content>
 </div>
