Criando Diretiva Customizada - (Modulo Diretiva - Loiane)

--- a/angular-part03-diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
+++ b/angular-part03-diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
@@ -63,4 +63,8 @@
       Some quick example text to build on the card title and make up the bulk of the card's content.
     </div>
   </app-diretiva-ng-content>
+
+  <hr class="m-0">
+
+  <app-diretiva-custom></app-diretiva-custom>
 </div>
