--- a/angular-part06-rotas/src/app/app.component.html
+++ b/angular-part06-rotas/src/app/app.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto text-center">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/cursos']" [routerLinkActive]="'active'">Cursos</a>
+          <a class="nav-link" [routerLink]="['/cursos/']" [queryParams]="{pagina:1, user: 'logado'}" [routerLinkActive]="'active'">Cursos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/login']">Login</a>
+          <a class="nav-link" [routerLink]="['/login']" [routerLinkActive]="'active'">Login</a>
         </li>
       </ul>
     </div>
