--- a/angular-part06-rotas/src/app/alunos/alunos.component.html
+++ b/angular-part06-rotas/src/app/alunos/alunos.component.html
@@ -2,7 +2,7 @@
   <section class=" alunos col-md-6">
     <h2>Lista de Alunos</h2>
     <div class="list-group py-2">
-      <a class="list-group-item list-group-item-action" [routerLink]="['/alunos/', i.id]" *ngFor="let i of alunos">{{ i.nome }}</a>
+      <a class="list-group-item list-group-item-action" [routerLink]="['/alunos/', i.id]" *ngFor="let i of alunos">{{ i?.nome }}</a>
     </div>
   </section>
   <!--<button class="btn btn-primary" (click)="showAlunosForm()">Cadastrar Aluno</button>-->
