Aplicando Validacoes e CSS com Form Data Reativo - (Modulo Form Data Reativo - Loiane)

--- a/angular-part07-formulario/src/app/app.component.html
+++ b/angular-part07-formulario/src/app/app.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarsExample07">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Template Form(Padrão)</a>
+          <a class="nav-link" [routerLink]="['/template']" [routerLinkActive]="['active']">Template Form(Padrão)</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Data Form(Reativo)</a>
+          <a class="nav-link" [routerLink]="['/data']" [routerLinkActive]="['active']">Data Form(Reativo)</a>
         </li>
       </ul>
     </div>
