Utilizando Select Option Multiple com [ngValue] de Objetos com Form Data Reativo - (Modulo Form Data Reativo - Loiane)

--- a/angular-part07-formulario/src/assets/css/pagina-inicial.css
+++ b/angular-part07-formulario/src/assets/css/pagina-inicial.css
@@ -10,4 +10,8 @@ section.debugg pre {
   border-color: #9e9e9e;
 }
 
+section.data-form .multiSelect {
+  height: auto;
+}
+
 /*# sourceMappingURL=pagina-inicial.css.map */
